--- a/SupermarketManagementApp/Properties/Resources.resx
+++ b/SupermarketManagementApp/Properties/Resources.resx
@@ -133,6 +133,12 @@
   <data name="grid-edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\grid-edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="black-invoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\black-invoice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hide-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\hide-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="black-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\black-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -169,11 +175,11 @@
   <data name="black-caret-down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\black-caret-down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="show-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\show-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="grid-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\grid-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="black-invoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\black-invoice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="white-stats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-stats.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -208,10 +214,7 @@
   <data name="black-stats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\black-stats.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="hide-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\hide-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="show-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\show-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="supermarket-logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\supermarket-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
