Add CustomerInvoiceManagement view, update UI for SearchBox and update color for Button

--- a/SupermarketManagementApp/Properties/Resources.resx
+++ b/SupermarketManagementApp/Properties/Resources.resx
@@ -124,20 +124,14 @@
   <data name="white-gauge" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-gauge.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="white-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\white-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="white-employee" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\white-employee.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="white-account" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-account.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="grid-edit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\grid-edit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="black-invoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\black-invoice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="hide-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\hide-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="black-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\black-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -151,14 +145,17 @@
   <data name="white-caret-down" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-caret-down.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="supermarket-logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\supermarket-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="white-product" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-product.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="grid-product" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\grid-product.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="white-employee" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\white-employee.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="hide-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\hide-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sign-out1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\sign-out.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -178,8 +175,14 @@
   <data name="show-password" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\show-password.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="white-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\white-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="grid-shelf" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\grid-shelf.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="black-invoice" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\black-invoice.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="white-stats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\white-stats.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -214,7 +217,7 @@
   <data name="black-stats" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\black-stats.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="supermarket-logo1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\resources\supermarket-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="grid-info" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\grid-info.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
