--- a/SupermarketManagementApp/GUI/Invoice/SupplierInvoice/FormSupplierInvoiceManagement.resx
+++ b/SupermarketManagementApp/GUI/Invoice/SupplierInvoice/FormSupplierInvoiceManagement.resx
@@ -123,6 +123,9 @@
   <metadata name="icon.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="SupplierInvoiceID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Employee.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
