--- a/SupermarketManagementApp/GUI/Invoice/CustomerInvoice/FormCustomerInvoiceManagement.resx
+++ b/SupermarketManagementApp/GUI/Invoice/CustomerInvoice/FormCustomerInvoiceManagement.resx
@@ -126,6 +126,9 @@
   <metadata name="icon.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="CustomerInvoiceID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="Employee.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
