--- a/SupermarketManagementApp/GUI/Account/FormUpdateAccount.resx
+++ b/SupermarketManagementApp/GUI/Account/FormUpdateAccount.resx
@@ -120,4 +120,10 @@
   <metadata name="borderLessForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="msgBoxError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>284, 20</value>
+  </metadata>
+  <metadata name="msgBoxInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>535, 20</value>
+  </metadata>
 </root>
