--- a/SupermarketManagementApp/GUI/Customer/FormCreateCustomer.resx
+++ b/SupermarketManagementApp/GUI/Customer/FormCreateCustomer.resx
@@ -120,4 +120,10 @@
   <metadata name="borderLessForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="msgBoxError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>670, 20</value>
+  </metadata>
+  <metadata name="msgBoxInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>811, 20</value>
+  </metadata>
 </root>
