--- a/SupermarketManagementApp/GUI/Product/ProductType/FormUpdateProductType.resx
+++ b/SupermarketManagementApp/GUI/Product/ProductType/FormUpdateProductType.resx
@@ -120,4 +120,13 @@
   <metadata name="borderLessForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="msgBoxError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>440, 63</value>
+  </metadata>
+  <metadata name="msgBoxDelete.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>579, 63</value>
+  </metadata>
+  <metadata name="msgBoxInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>730, 63</value>
+  </metadata>
 </root>
