--- a/SupermarketManagementApp/GUI/Invoice/CustomerInvoice/FormCreateCustomerInvoice.resx
+++ b/SupermarketManagementApp/GUI/Invoice/CustomerInvoice/FormCreateCustomerInvoice.resx
@@ -123,4 +123,7 @@
   <metadata name="msgBoxError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>265, 20</value>
   </metadata>
+  <metadata name="msgBoxInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>379, 27</value>
+  </metadata>
 </root>
