--- a/SupermarketManagementApp/GUI/ShelfMap/FormDetailProductOnShelf.resx
+++ b/SupermarketManagementApp/GUI/ShelfMap/FormDetailProductOnShelf.resx
@@ -123,4 +123,7 @@
   <metadata name="msgBoxError.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>526, 20</value>
   </metadata>
+  <metadata name="msgBoxInfo.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>640, 17</value>
+  </metadata>
 </root>
